# fitness-app

./: Daan mentioned  index.html  main.css  package-lock.json  package.json  tailwind.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml
src-tauri/src/: api.rs  lib.rs
src-tauri/src/application/: mod.rs  session_service.rs  workout_service.rs
src-tauri/src/domain/: Exercise.rs  Workout.rs  completedworkout.rs  exercise.rs  mod.rs  ports.rs  session.rs  workout.rs
src-tauri/src/endpoints/: get_exercise_by_id.rs
src-tauri/src/infrastructures/sqlite/: builder.rs  database.rs  mod.rs
src-tauri/src/interface/: dto.rs  mod.rs  tauri_commands.rs
src-tauri/src/lars/: add_food.rs  delete_food_by_id.rs  get_exercises_by_id.rs  get_food_by_date.rs  get_product_by_barcode.rs  get_product_detail.rs  get_products.rs  get_products_by_search.rs  let injectedFoodLabel = {"gmWgt":"35","c.ts  mod.rs
src-tauri/src/mvp/: edit_workout.rs  expected_improvements.rs  get_single_food_entry.rs  linear_regression.rs  mod.rs  update_stored_product.rs
src-tauri/src/repository/: completed_exercise_repository.rs  exercise_repository.rs  mod.rs  workout_exercise_repository.rs  workout_history_repository.rs  workout_repository.rs
src-tauri/src/services/: database.rs
src-tauri/src/structs/: mod.rs  session.rs
src/Hooks/: UseCompletedSession.ts  UseExerciseList.ts  UseExerciseSelection.ts  UseMuscleFilters.ts  UsePredictNextWorkout.ts  UseSetUpdate.ts  UseWorkoutCreation.ts  UseWorkouts.ts  useDebounce.ts  useDetailedWorkout.ts  useElapsedTime.ts  useExercises.ts  (+9 more)
(+161 files in other folders)
