[package]
name = "fitness-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fitness_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] } # rust + sqlite
thiserror = "1.0"          # structured errors
uuid = { version = "1.21.0", features = ["v4"] } # Lets you generate random UUIDs
openfoodfacts = { git = "https://github.com/openfoodfacts/openfoodfacts-rust.git"}
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0.73"
tauri-plugin-barcode-scanner = "2.0.0"
chrono = "0.4.45"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]

